--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+### emberger additions:
+**/*_secret.*
+
+
+#### Original from fork:
 dotnet/.config
 
 ## Ignore Visual Studio temporary files, build results, and
